// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> with additional className matches its snapshot 1`] = `
<div
  className="y-box TEST_CLASSNAME"
>
  <Block
    className="y-box--inner"
    padding="small"
  />
</div>
`;

exports[`<Box /> with children passed matches its snapshot 1`] = `
<div
  className="y-box"
>
  <Block
    className="y-box--inner"
    padding="small"
  />
</div>
`;

exports[`<Box /> with default options matches its snapshot 1`] = `
<div
  className="y-box"
>
  <Block
    className="y-box--inner"
    padding="small"
  />
</div>
`;
